--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -16,13 +16,12 @@
   <ul class="menu">
     <li><a href="#/home">home</a></li>
     <li><a href="#/chat">chat</a></li>
+    <li><a href="#/public-challenges">public challenges</a></li>
     <li ng-hide-auth><a href="#/login">login</a></li>
     <li ng-show-auth><a href="#/account">account</a></li>
   </ul>
 
   <div ng-view></div>
-
-  <div>AngularFire-seed v<span app-version></span></div>
 
   <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.x/angular.min.js"></script>
