populate more create challenge values; some housekeeping

--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>Challengr</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
@@ -17,6 +17,7 @@
     <li><a href="#/home">home</a></li>
     <li><a href="#/chat">chat</a></li>
     <li><a href="#/public-challenges">public challenges</a></li>
+    <li><a href="#/create-challenge">create challenge</a></li>
     <li ng-hide-auth><a href="#/login">login</a></li>
     <li ng-show-auth><a href="#/account">account</a></li>
   </ul>
