--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -36,6 +36,7 @@
   <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
   <script src="bower_components/angularfire/dist/angularfire.js"></script>
 
+  <script src="http://cdn.kik.com/kik/1.0.9/kik.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
