--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="myApp">
 <head>
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Challengr</title>
@@ -10,6 +11,7 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet" href="css/app.css"/>
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 </head>
 <body ng-cloak>
 
@@ -36,7 +38,7 @@
   <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
   <script src="bower_components/angularfire/dist/angularfire.js"></script>
 
-
+  
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
   <script src="js/controllers.js"></script>
@@ -48,5 +50,6 @@
   <script src="js/firebase.utils.js"></script>
   <script src="js/simpleLogin.js"></script>
   <script src="js/changeEmail.js"></script>
+
 </body>
 </html>
