--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/bootstrap.css"/>
   <link rel="stylesheet" href="css/app.css"/>
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
-  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
 </head>
 <body ng-cloak>
@@ -57,7 +57,7 @@
   <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
   <script src="bower_components/angularfire/dist/angularfire.js"></script>
 
-  <script src="http://cdn.kik.com/kik/1.0.9/kik.js"></script>
+  <script src="https://cdn.kik.com/kik/1.0.9/kik.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
