--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -14,6 +14,7 @@
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/touch-swipe-drag.min.js"></script>
 </head>
 <body ng-cloak>
   <nav class="navbar navbar-default navbar-fixed-top" style="opacity:0.75;">
