Fixed navbar so that it displays inline

--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -32,15 +32,15 @@
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav list-inline inline-menu">
           <li class="">
-            <a type="button" href="#/public-challenges" class="btn btn-primary navbar-btn">Public</a>
+            <a type="button" href="#/public-challenges" >Public</a>
           </li>
           <li>
-            <a type="button" href="#/create-challenge" class="btn btn-primary navbar-btn">Create</a>
+            <a type="button" href="#/create-challenge" >Create</a>
           </li>
           <li>
-            <a type="button" class="btn btn-primary navbar-btn">Current Challenges</a>
+            <a type="button" >Current Challenges</a>
           </li>
         </ul>
       </div>
@@ -60,7 +60,7 @@
       background: url(img/challengr_background2.jpg);
       background-size: cover;
       background-position: bottom;
-      height:250px;
+      height:290px;
       width: 100%;
     }
   </style>
