Fixed navbar so that it displays inline

--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -34,13 +34,13 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav list-inline inline-menu">
           <li class="">
-            <a type="button" href="#/public-challenges" >Public</a>
+            <a type="button" href="#/public-challenges" >View</a>
           </li>
           <li>
-            <a type="button" href="#/create-challenge" >Create</a>
+            <a type="button" href="#/create-challenge" >New</a>
           </li>
           <li>
-            <a type="button" >Current Challenges</a>
+            <a type="button" >Your Challenges</a>
           </li>
         </ul>
       </div>
