--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="overflow:hidden;max-height:61px;">
         <ul class="nav navbar-nav list-inline inline-menu">
           <li class="">
             <a type="button" href="#/public-challenges" >View</a>
