--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -10,11 +10,12 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet" href="css/bootstrap.css"/>
+  <link rel="stylesheet" href="css/flipclock.css"/>
   <link rel="stylesheet" href="css/app.css"/>
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/touch-swipe-drag.min.js"></script>
+  <script src="js/flipclock.min.js"></script>
 </head>
 <body ng-cloak>
   <nav class="navbar navbar-default navbar-fixed-top" style="opacity:0.75;">
@@ -27,7 +28,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Challengr</a>
+        <a class="navbar-brand" href="#">kik challengr</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
