allow public challenges link to work after share (with extreme hackiness)

--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -34,7 +34,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav list-inline inline-menu">
           <li class="">
-            <a type="button" href="#/public-challenges" >Public</a>
+            <a id="public-challenges-button" type="button" href="#/public-challenges">Public</a>
           </li>
           <li>
             <a type="button" href="#/create-challenge" >Create</a>
