my challenges skeleton

--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -40,7 +40,7 @@
             <a type="button" href="#/create-challenge" >Create</a>
           </li>
           <li>
-            <a type="button" >Current Challenges</a>
+            <a type="button" href="#/my-challenges">My Challenges</a>
           </li>
         </ul>
       </div>
