--- a/public/angular/app/index.html
+++ b/public/angular/app/index.html
@@ -11,12 +11,12 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet" href="css/bootstrap.css"/>
-  <link rel="stylesheet" href="css/flipclock.css"/>
+  <link rel="stylesheet" href="css/bootstrap-switch.css">
   <link rel="stylesheet" href="css/app.css"/>
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/flipclock.min.js"></script>
+  <script src="js/bootstrap-switch.min.js"></script>
 </head>
 <body ng-cloak>
   <nav class="navbar navbar-default navbar-fixed-top row" style="opacity:0.75;padding:5px 20px 0px 20px;text-align:center;">
